setting the third version of the project